<resources>
    <string name="app_name">API Methods 1.0</string>
    <string name="title_activity_user_update">Activity_UserUpdate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_users">Cadastrar Usuários</string>
    <string name="see_users">Visualizar Usuários</string>
    <string name="update_users">Atualizar Usuários</string>
    <string name="delete_users">Excluir Usuários</string>
    <string name="register_users_actvtsee">Usuários Cadastrados</string>
    <string name="method_post">Método POST</string>
    <string name="method_delete">Método DELETE</string>
    <string name="method_get">Método GET</string>
    <string name="method_update">Método UPDATE</string>
    <string name="methods_api">Métodos da API</string>
    <string name="back">Voltar</string>
    <string name="enter_subtitle">Digite o Sub - Título</string>
    <string name="enter_chapter">Digite o Capítulo</string>
    <string name="enviar_dados_para_api">Enviar Dados para API</string>
</resources>