<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_post.view.ActivityPost">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVw_header_actvtPost_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/method_post"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVw_head_actvtPost_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enviar dados para a API"
        android:textSize="19dp"
        android:textStyle="bold"     />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/enter_subtitle"
        android:inputType="textCapWords|textImeMultiLine"
        android:textSize="20sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTxt_subTitle_actvtPost_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="Digite o Texto"
        android:inputType="textCapWords|textImeMultiLine"
        android:textSize="20sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTxt_text_actvtPost_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--button for adding data-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_postData_actvtPost_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/enviar_dados_para_api"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVw_responseSubTitle_actvtPost_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="▬ Sub - Título: "
        android:textSize="21sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVw_responseText_actvtPost_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="▬ Texto: "
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVw_response_actvtPost_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Dados da API"
            android:textSize="19dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/prgrssBar_actvtPost_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            app:indicatorColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcclrVw_actvtPost_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@id/button_back_actvtPost_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back_actvtPost_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="@color/black"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>