<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_post.view.ActivityPostPersonalData">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVw_header_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:text="POST - Dados Pessoais"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lnrLt_edtTxt_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_header_actvtPostPersonalData_id">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/enter_chapter"
            android:inputType="textCapWords|textImeMultiLine"
            android:textSize="20sp"
            app:colorControlActivated="?attr/colorOnPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxt_subTitle_actvtPostPersonalData_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="Digite o Texto"
            android:inputType="textCapWords|textImeMultiLine"
            android:textSize="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxt_text_actvtPostPersonalData_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_postData_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/enviar_dados_para_api"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/lnrLt_edtTxt_actvtPostPersonalData_id" />

    <ProgressBar
        android:id="@+id/prgrssBar_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/black"
        android:visibility="visible"
        app:indicatorColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/lnrLt_responseAPI_actvtPostPersonalData_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lnrLt_responseAPI_actvtPostPersonalData_id" />

    <LinearLayout
        android:id="@+id/lnrLt_responseAPI_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bttn_postData_actvtPostPersonalData_id">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVw_responseChapter_actvtPostPersonalData_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="▬ CAPÍTULO: "
            android:textSize="21sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVw_responseSubTitle_actvtPostPersonalData_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="▬ TÍTULO: "
            android:textSize="21sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVw_responseText_actvtPostPersonalData_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="▬ PARÁGRAFO: "
            android:textSize="21sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtVw_apiData_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="DADOS DA API"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnrLt_responseAPI_actvtPostPersonalData_id" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcclerVw_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@id/bttn_back_actvtPostPersonalData_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_apiData_actvtPostPersonalData_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_back_actvtPostPersonalData_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>